# NusaHarvest

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  HARI6_FRONTEND_ONCHAIN.md  README.md  SMART_CONTRACTS_STATUS.md  deploy.sh  docker-compose.yml  final_url.txt  force_live.txt  git_url.txt  next.config.js  nusa_harvest.sql  package-lock.json  package.json  perfect_url.txt  tailwind.config.js  vercel.json  vercel_deploy.txt  working_live.txt
.claude/: settings.json  settings.local.json
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  trace
backend/: .env  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json  vercel.json
contracts/: Anchor.toml  Cargo.toml  DEPLOYMENT_PROOF.json
contracts/programs/nusa-harvest/: Cargo.toml
contracts/programs/nusa-harvest/src/: lib.rs
docs/: CTO_JUDICIAL_REPORT_v1_0.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PROOF_FINAL.md  DEPLOYMENT_PROOF_V2.md  DEPLOYMENT_READY.md  DEPLOYMENT_VERIFICATION_MAY4_2026.md  DUMMY_CONTENT_REMOVED_VERIFICATION.md  FINAL_VERIFICATION_REPORT.md  JUDICIAL_CLARIFY_V2.md  MVP_DEPLOYMENT_PROOF.md  NUSA_HARVEST_COMPLETE_SPEC.md  NUSA_HARVEST_COMPLETE_SPEC_V2.md  NUSA_HARVEST_FINAL_MVP_SPECS.md  NUSA_HARVEST_MASTER_ARCH_PROD.md  NUSA_HARVEST_MVP_FINAL_MANUAL.md  NUSA_HARVEST_SPEC.md  OFFICIAL_NUSA_HARVEST_DOCS.md  OFFICIAL_NUSA_HARVEST_MASTER_SPEC.md  ONCHAIN_INDEXER_SETUP.md  architecture.md  (+7 more)
programs/nusa_harvest_vault/: Cargo.toml
programs/nusa_harvest_vault/src/: lib.rs
(+113 files in other folders)
