[workspace]
members = [
    "programs/nusa_harvest_pool",
    "programs/nusa_harvest_insurance",
    "programs/nusa_harvest_vault",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
