[package]
name = "nusa-harvest"
version = "0.1.0"
description = "Nusa Harvest AgroFi — Parametric Crop Insurance on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nusa_harvest"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = "0.30.0"
